--- a/src/app/_assets/config/abs-config.json
+++ b/src/app/_assets/config/abs-config.json
@@ -4,8 +4,8 @@
   "mapping": [
     {
       "name": "epigastrium",
-      "active": "epigastrium-active.png",
-      "highlight": "epigastrium-highlight.png",
+      "active": ["epigastrium-active.png"],
+      "highlight": ["epigastrium-highlight.png"],
       "polygons": [
         [
           { "x": 342, "y": 391 },
@@ -17,8 +17,8 @@
     },
     {
       "name": "luq",
-      "active": "luq-active.png",
-      "highlight": "luq-highlight.png",
+      "active": ["luq-active.png"],
+      "highlight": ["luq-highlight.png"],
       "polygons": [
         [
           { "x": 422, "y": 463 },
@@ -31,8 +31,8 @@
     },
     {
       "name": "llq",
-      "active": "llq-active.png",
-      "highlight": "llq-highlight.png",
+      "active": ["llq-active.png"],
+      "highlight": ["llq-highlight.png"],
       "polygons": [
         [
           { "x": 452, "y": 523 },
@@ -46,8 +46,8 @@
     },
     {
       "name": "suprapubic",
-      "active": "suprapubic-active.png",
-      "highlight": "suprapubic-highlight.png",
+      "active": ["suprapubic-active.png"],
+      "highlight": ["suprapubic-highlight.png"],
       "polygons": [
         [
           { "x": 400, "y": 567 },
@@ -61,8 +61,8 @@
     },
     {
       "name": "rlq",
-      "active": "rlq-active.png",
-      "highlight": "rlq-highlight.png",
+      "active": ["rlq-active.png"],
+      "highlight": ["rlq-highlight.png"],
       "polygons": [
         [
           { "x": 267, "y": 526 },
@@ -76,8 +76,8 @@
     },
     {
       "name": "ruq",
-      "active": "ruq-active.png",
-      "highlight": "ruq-highlight.png",
+      "active": ["ruq-active.png"],
+      "highlight": ["ruq-highlight.png"],
       "polygons": [
         [
           { "x": 325, "y": 405 },
@@ -90,8 +90,8 @@
     },
     {
       "name": "umbilicus",
-      "active": "umbilicus-active.png",
-      "highlight": "umbilicus-highlight.png",
+      "active": ["umbilicus-active.png"],
+      "highlight": ["umbilicus-highlight.png"],
       "polygons": [
         [
           { "x": 400, "y": 482 },
@@ -107,8 +107,17 @@
     },
     {
       "name": "all-over",
-      "active": "",
-      "highlight": "all-over-highlight.png",
+      "active": [],
+      "highlight": [
+        "epigastrium-highlight.png",
+        "luq-highlight.png",
+        "llq-highlight.png",
+        "suprapubic-highlight.png",
+        "rlq-highlight.png",
+        "ruq-highlight.png",
+        "umbilicus-highlight.png",
+        "all-over-highlight.png"
+      ],
       "polygons": [
         [
           { "x": 256, "y": 854 },
